# hanabi-server

./: .gitignore  Cargo.toml  README.md  build.rs  config.ini
crates/hanabi-build/: Cargo.toml  README.md
crates/hanabi-build/src/: db.rs  dirs.rs  lib.rs  ui.rs
crates/hanabi-configs/: Cargo.toml  README.md  config.ini
crates/hanabi-configs/examples/: test.rs
crates/hanabi-configs/src/: lib.rs  parse.rs
crates/hanabi-configs/src/parse/: analyze_semantics.rs  analyze_syntax.rs
examples/: config_file.rs  test.rs
src/: analyze_semantics.rs  analyze_syntax.rs  auth.rs  configs.rs  database_operations.rs  db.rs  index.rs  lex.rs  lib.rs  main.rs  services.rs  ui.rs
src/auth/: parse.rs
src/parse/: analyze_syntax.rs  lex.rs
src/services/: auth.rs  configs.rs  index.rs  routing.rs
src/services/auth/: operations.rs  prologue.rs
