[package]
name = "hanabi"
version = "0.1.0"
edition = "2024"
# build = false

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
pheasant = { version = "0.1.0", path = "../pheasant" }
sha2 = "0.10.9"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
melh = { version = "0.1.0", path = "../melh" }
sqlx = { version = "0.8.6", features = ["sqlite"] }
makura = { version = "0.1.2", path = "../makura/makura" }
[build-dependencies]
### WARN this dep and the sqlx one above can only coexist when they both use the same version of libsqlite3-sys dependency
rusqlite = "0.32.0"
